Adwaita: sidebar scrollbar fix.
.scrollbars-junction borders were removed by setting border-stylei: none,
it interacted (why?) with the scrollbars on sidebar, making the border
transparent seems not to have side effects there.

--- a/gtk/resources/theme/Adwaita/_common.scss
+++ b/gtk/resources/theme/Adwaita/_common.scss
@@ -1182,7 +1182,7 @@ GtkTreeView.view.progressbar { //Progressbar in treeview cells
 }
 
 .scrollbars-junction { // the small square between two scrollbars
-  border-style: none;
+  border-color: transparent;
   background-color: darken($bg_color, 5%);
   &:backdrop { background-color: transparent; }
 }
