--- a/gtk/resources/theme/Adwaita/gtk-contained-dark.css
+++ b/gtk/resources/theme/Adwaita/gtk-contained-dark.css
@@ -1383,7 +1383,7 @@ GtkTreeView.view.progressbar {
         background-color: #215d9c; }
 
 .scrollbars-junction, .scrollbar.trough {
-  border-style: none;
+  border-color: transparent;
   background-color: #2d3232; }
   .scrollbars-junction:backdrop, .scrollbar.trough:backdrop {
     background-color: transparent; }
