--- a/gtk/resources/theme/Adwaita/gtk-contained.css
+++ b/gtk/resources/theme/Adwaita/gtk-contained.css
@@ -1384,7 +1384,7 @@ GtkTreeView.view.progressbar {
         background-color: #4a90d9; }
 
 .scrollbars-junction, .scrollbar.trough {
-  border-style: none;
+  border-color: transparent;
   background-color: #e0e0e0; }
   .scrollbars-junction:backdrop, .scrollbar.trough:backdrop {
     background-color: transparent; }
